--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 4rem;
+  margin-top: 2rem;
   background-color: #141516f2;
   overflow-x: hidden;
 }
@@ -24,19 +24,26 @@ button {
   min-width: 560px;
   padding-left: 25px;
   padding-right: 25px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   cursor: pointer;
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-size: 1rem;
+  font-weight: lighter;
   border-radius: 0.4rem;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-right: 1rem;
+  transition: all 0.5s ease;
 }
 
+button:hover {
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  background-color: #141516;
+  border: 1px solid #01fffc;
+  color: white;
+}
 span {
   font-size: 1.6rem;
   padding-left: 1rem;
@@ -55,11 +62,10 @@ span {
   font-size: 1rem;
   font-weight: 200;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.299);
-  transition: all 0.3s ease-in-out;
-
 }
-
 .faq {
-  color: #01fffc;
-  font-family: sans-serif;
+  color: #ffffff;
+  font-family: "Roboto", Sans-serif;
+  font-size: 50px;
+  font-weight: 600;
 }
